# Projeto_xpe

./: .gitignore  README.md  app.py  pyproject.toml
bd/: postgree.py
html_css/: style.py
paginas/: cache.py  home.py  indices.py  rendafixa.py  rendavariavel.py  setores_ibov.py
util/: util.py
