[tool.poetry]
name = "Simulador Financeiro"
version = "0.1.0"
description = ""
authors = ["Roberto Ricci <roberto.rricci@gmail.com.br>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10.0"
pandas = "^2.2.2"
streamlit = "^1.35.0"
taskipy = "^1.12.2"
plotly = "^5.22.0"
openpyxl = "^3.1.3"
streamlit-option-menu = "^0.3.13"
yfinance = "^0.2.40"
streamlit-extras = "^0.4.3"
sqlalchemy = "^2.0.31"
psycopg2 = "^2.9.9"
python-dotenv = "^1.0.1"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.taskipy.tasks]
run = 'streamlit run app.py'
